--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -47,7 +47,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
+            <h2 class="portfolio-title">KariPic</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
@@ -71,16 +71,16 @@
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>Project information</h3>
+            <h3>Información del Proyecto</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Categoria</strong>: Diseño Web</li>
+              <li><strong>Client</strong>: KariPic</li>
+              <li><strong>Project date</strong>: junio, 2023</li>
+              <li><strong>Project URL</strong>: <a href="https://karipics2.onrender.com/">https://karipics2.onrender.com/</a></li>
             </ul>
 
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              Sitio web diseñado para una fotografa que deseaba disponibilizar sus fotografías en su web propia y que los usuarios de la misma puediesen comentarlas.   
             </p>
           </div>
 
